# sre-mcp-server

./: .gitignore  .pre-commit-config.yaml  README.md  client.py  env.example  main.py  pyproject.toml  server.py
azure_devops/: client.py  config.py  models.py  tools.py
k8s/: client.py  kube_client.py  models.py  tools.py
local/: anthropic.py  claude_client.py  config.py  mcp_client.py
