[project]
name = "sre-mcp-server"
version = "0.1.0"
description = "MCP server for SRE tooling to enable AI-assisted DevOps workflows."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.96.0",
    "azure-devops>=7.1.0b4",
    "fastmcp>=3.2.4",
    "kubernetes>=35.0.0",
    "msrest>=0.7.1",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.1",
    "pylint>=4.0.5",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ['.venv']
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "local.*"
ignore_errors = true

[tool.pylint.main]
ignore = [".venv", "local"]
recursive = true

[tool.pylint.messages_control]
disable = [
    "no-member",
    "too-few-public-methods",
]
